force-app/main/default/objects/LudoPlayer__c/LudoPlayer__c.object-meta.xml
<CustomObject>
    <label>ludo Player</label>
    <nameField>
        <label>ludo Player Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ludo Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>