force-app/main/default/objects/LudoPlayer__c/fields/isMoveAcknowledged__c.field-meta.xml
<CustomField>
    <fullName>isMoveAcknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMoveAcknowledged</label>
    <type>Checkbox</type>
</CustomField>