force-app/main/default/objects/LudoPlayer__c/fields/ludoBoard__c.field-meta.xml
<CustomField>
    <fullName>ludoBoard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ludo Board</label>
    <referenceTo>LudoBoard__c</referenceTo>
    <relationshipLabel>ludo Player</relationshipLabel>
    <relationshipName>ludo_Player</relationshipName>
    <type>Lookup</type>
</CustomField>