force-app/main/default/objects/LudoPlayer__c/fields/playerType__c.field-meta.xml
<CustomField>
    <fullName>playerType__c</fullName>
    <label>player Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player1</fullName>
                <label>Player 1</label>
            </value>
            <value>
                <fullName>Player2</fullName>
                <label>Player 2</label>
            </value>
            <value>
                <fullName>Player3</fullName>
                <label>Player 3</label>
            </value>
            <value>
                <fullName>Player4</fullName>
                <label>Player 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>