force-app/main/default/objects/LudoPlayer__c/fields/unique_Id_Validation__c.field-meta.xml
<CustomField>
    <fullName>unique_Id_Validation__c</fullName>
    <label>unique  Id Validation</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>